src/components/website/login/Login.scss
.login-container {
    width: 1440px;

    margin: 0 auto;
}

.login-background {
    background-image: url(../../../assets/images/GoogleMaps.png);
    background-repeat: no-repeat;
    background-size: cover;

    height: 100vh;
}

.login-header {
    position: absolute;

    padding: 20px 20px 0 20px;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.login-header-block {
    max-height: 46px;
    
    background-color: #000000;

    padding: 13px 20px;

    border: 1px solid #454545;
    border-radius: 10px;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
}

.login-header-brand-logo {
    height: 20px;
    width: 20px;
}

.login-header-brand-text {
    font-size: 20px;
    font-weight: 500;
    line-height: 19px;
    color: #FFFFFF;
}

.login-header-inner-block {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 8px;
}

.login-header-account-image {
    height: 100%;
    width: 100%;
}

.login-header-account-text {
    font-size: 14px;
    font-weight: 500;
    line-height: 17px;

    color: #FFFFFF;

    text-decoration: underline;
}

.login-modal-container {
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.login-modal {
    max-width: 690px;
    max-height: 516px;

    width: 100%;
    height: 100%;

    border-radius: 10px;
    border: 1px solid #454545;
    background: linear-gradient(0deg, rgba(30, 30, 30, 0.90) 0%, rgba(46, 46, 46, 0.90) 100%);
    backdrop-filter: blur(10px);

    text-align: center;
}

.login-ellipses-container {
    max-width: inherit;
    max-height: inherit;

    width: 100%;
    height: 100%;

    position: absolute;

    z-index: -1;

    border-radius: inherit;
    opacity: 0.4;
    overflow: hidden;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.login-ellipse-left-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.login-ellipse-right-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.login-ellipse {
    width: 335px;
    height: 335px;
    opacity: 0.6;
    border-radius: 50%;
    filter: blur(50px);
}
.login-ellipse-green {
    transform: translate(-45%, -10%);
    background: #72CC00;
}

.login-ellipse-blue {
    transform: translate(60%, 30%);
    background: #26FFF2;
}

.login-modal-content-container {
    height: 100%;
    padding: 46px 0 32px 0;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.login-modal-top-container {
    max-width: 340px;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 16px;
}

.login-modal-logo {
    max-width: 46px;
    max-height: 46px;
    width: 100%;
    height: 100%;
}

.login-modal-header {
    font-size: 40px;
    font-weight: 500;
    line-height: 39px;
    color: #FFFFFF;
}

.login-modal-header-description {
    text-align: center;

    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
    color: #FFFFFF;
}

.login-modal-opaque-text {
    opacity: 50%;
}

.login-modal-input-help {
    font-size: 14px;
    font-weight: 500;
    line-height: 17px;
    color: #FFFFFF;
}

.login-modal-input-box-container {
    height: 52px;
    width: 340px;

    background-color: #222222;

    border: 2px solid #3A3A3A;
    border-radius: 10px;

    padding: 0 14px;

    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;

    .login-modal-input-envelope-image {
        width: 20px;
        height: 16px;
    }

    .login-modal-input-text {
        color: #FFFFFF;
        font-size: 14px;
        font-weight: 700;
        line-height: 18px;
    }

    .login-modal-input-inner-container-wrong-input {
        border-color: #FF5572;
    }

    .login-modal-correct-input {
        color: #ACF709;
    }

    .login-modal-wrong-input {
        color: #FF5572;
    }

    .login-modal-input-otp-container {
        width: 340px;

        display: flex;
        align-content: space-between;
        gap: 10px;

        input {
            height: 48px;
            width: 48px;

            border: 2px solid #3A3A3A;
            border-radius: 10px;

            font-size: 32px;
            font-weight: 500;
            line-height: 24px;
            text-align: center;

            color: #FFFFFF;
        }
    }
}

.login-modal-bottom-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 16px;

    /* This container shall have only buttons */
    input {
        height: 52px;
        width: 340px;

        border-radius: 10px;

        text-align: center;

        font-size: 16px;
        font-weight: 700;
        line-height: 22px;
    }

    .login-modal-button-black-on-green {
        color: #000000;
        background-color: #ACF709;
    }

    .login-modal-button-green-on-black {
        color: #ACF709;
        background-color: #000000;
    }
}

